--- a/source/themes/tekkie/tekkie/_includes/footer.html
+++ b/source/themes/tekkie/tekkie/_includes/footer.html
@@ -26,7 +26,7 @@
 {% block scripts %}
 {% endblock %}
 
-{% if site.google_analytics_tracking_id %}
+{% if site.analytics.google %}
 
 <script type="text/javascript">
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -34,7 +34,7 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
+ga('create', '{{ site.analytics.google }}', 'auto');
 ga('send', 'pageview');
 </script>
 {% endif %}
@@ -46,6 +46,15 @@ ga('send', 'pageview');
 <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', '{{ site.analytics.google }}', 'auto');
+  ga('send', 'pageview');
+</script>
 {% block scripts_after %}
 {% endblock %}
 </body>
