--- a/source/index.html.twig
+++ b/source/index.html.twig
@@ -20,86 +20,80 @@ use:
 
 {% block content %}
 
+<div class="ui inverted vertical masthead center aligned segment">
+{% include "navigation" with { 'style': 'ui large secondary inverted pointing menu', 'logo': 'logomark-tekkie-white.svg' } %}
 
-  <section class="intro-img">
-      <div class="container">
-        <div class=intro-text>
-          <h1 class="intro-title">Tekkie Consulting</h1>
-          <div class="company-summary"><p>{{ site.company.summary }}</p></div>
-        </div>
-
-      <a href="{{ site.url }}/services" role="button" class="btn btn-lg intro-cta-button btn-danger">Check out more <span aria-hidden="true"></span></a>
-
-      </div>
-  </section><!-- end intro img -->
-  <div class="row services-section">
-    <div class="section-intro">
-      <h2 class="section-intro-title">What we do</h2>
-      <div class="section-summary"><p>Tekkie Consulting offers the following high quality services.</p></div>
-    </div>
-    
-    <div class="container">
-      <div class="row">
-      {% for service in site.company.services %}
-          <div class="col col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-bottom text=center">
-            <h4 class="text-center service-text {{service.title}}">{{ service.title }}</h4>
-          </div>
-      {% endfor %}
-      </div>
-    </div>
+  <div class="ui text container">
+    <h1 class="ui inverted header">
+      Tekkie Consulting
+    </h1>
+    <h2>{{ site.company.summary }}</h2>
+    <a class="ui huge primary button" href="{{ site.url }}/services">
+      Get Started <i class="right arrow icon"></i>
+    </a>
   </div>
 
+</div>
 
-<section class="section-blog-posts">
-  <div class="container">
-    <div class="section-intro">
-      <h2 class="section-intro-title">From our blog</h2>
-      <div class="section-summary"><p>The latest news from our blog. Happy reading.</p></div>
-    </div>
+  {#<div class="row services-section">#}
+    {#<div class="section-intro">#}
+      {#<h2 class="section-intro-title">What we do</h2>#}
+      {#<div class="section-summary"><p>Tekkie Consulting offers the following high quality services.</p></div>#}
+    {#</div>#}
+    {##}
+    {#<div class="container">#}
+      {#<div class="row">#}
+      {#{% for service in site.company.services %}#}
+          {#<div class="col col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-bottom text=center">#}
+            {#<h4 class="text-center service-text {{service.title}}">{{ service.title }}</h4>#}
+          {#</div>#}
+      {#{% endfor %}#}
+      {#</div>#}
+    {#</div>#}
+  {#</div>#}
 
-
-<div class="card-group">
-
-{% for post in page.pagination.items %}
-{% set postTitle = post.title %}
-{% if postTitle|length > site.posts.title.shorten %}{% set postTitle = postTitle[:site.posts.title.shorten] ~ "..." %}{% endif %}
-  <div class="card pl-2 pr-2">
-    <!-- <img class="card-img-top" src="http://placehold.it/350x150" alt="Card image cap"> -->
-    <div class="card-block">
-      <h4 class="card-title post-title">
-        <a href="{{ site.url }}{{ post.url }}">{{ postTitle }}</a>
+  <div class="ui vertical stripe segment" id="latest-from-blog">
+    <div class="ui text container">
+      <h4 class="ui horizontal header divider">
+          The latest news from our blog. Happy reading.
       </h4>
-      {% if post.excerpt %}
-      <p class="card-text">{{ post.excerpt }}</p>
-      {% else %}
-      <p class="card-text">{{ post.blocks.content|raw[0:100] }}</p>
-      {% endif %}
-    </div>
-    <div class="card-footer">
-      <p class="card-text">
-        
-    </p>
-    </div>
-{% if post.meta.tags %}
-    <div class="card-footer m-0 p-0 text-center">
-    <p class="card-text">
-{% for tag in post.meta.tags %}
-      <a href="{{ site.url }}/blog/tags/{{ tag|url_encode(true) }}" class="btn btn-default btn-xs">
-        <i class="ion-ios-pricetags-outline" ></i>{{ tag }}
+
+      {% for post in page.pagination.items %}
+        {% set postTitle = post.title %}
+        {% if postTitle|length > site.posts.title.shorten %}{% set postTitle = postTitle[:site.posts.title.shorten] ~ "..." %}{% endif %}
+      <a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">
+        <h3 class="ui header">
+            {{ post.title }}
+        </h3>
       </a>
-{% endfor %}
-        <small class="text-muted">
 
-        {% set daysAgo = date(post.date|date('Y/m/d')).diff(date('now'|date('Y/m/d'))).days %}
-        {% if 0 == daysAgo %}Today{% elseif 1 == daysAgo %}Yesterday{% else %}{{ daysAgo }} days ago{% endif %}
-      </small>
-    </p>
+          <p>
+            {% if post.excerpt %}
+              {{ post.excerpt }}
+            {% else %}
+              {{ post.blocks.content|raw[0:100] }}
+            {% endif %}
+          </p>
+
+        {% if post.meta.tags %}
+          <div class="card-footer m-0 p-0 text-center">
+            <p class="card-text">
+                {% for tag in post.meta.tags %}
+                  <a href="{{ site.url }}/blog/tags/{{ tag|url_encode(true) }}" class="ui tag label">
+                    {{ tag }}
+                  </a>
+                {% endfor %}
+              {#<small class="text-muted">#}
+                  {#{% set daysAgo = date(post.date|date('Y/m/d')).diff(date('now'|date('Y/m/d'))).days %}#}
+                  {#{% if 0 == daysAgo %}Today{% elseif 1 == daysAgo %}Yesterday{% else %}{{ daysAgo }} days ago{% endif %}#}
+              {#</small>#}
+            </p>
+          </div>
+        {% endif %}
+
+      <div class="ui hidden divider"></div>
+    {% endfor %}
     </div>
-{% endif %}
   </div>
-{% endfor %}
-</div>
 
-</div>
-</section>
 {% endblock %}
