--- a/source/themes/tekkie/tekkie-semantic/_layouts/home.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/home.html.twig
@@ -12,7 +12,7 @@
         {%- endif -%}
     </title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css" />
+    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.css" />
     <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic-overrides.css" />
 
 </head>
